--- a/frontend/src/app/pages/drink-menu/drink-form/drink-form.component.html
+++ b/frontend/src/app/pages/drink-menu/drink-form/drink-form.component.html
@@ -10,18 +10,18 @@
 
     <form (ngSubmit)="logForm()">
       <ion-item>
-        <ion-label>Drink Title</ion-label>
+        <ion-label position="floating">Drink Title</ion-label>
         <ion-input type="text" [(ngModel)]="drink.title" name="title"></ion-input>
       </ion-item>
 
       <ion-item *ngFor="let ingredient of drink.recipe; let i = index;  trackBy: customTrackBy">
-        <ion-label>Ingredient Name</ion-label>
+        <ion-label position="floating">Ingredient Name</ion-label>
         <ion-input [(ngModel)]="drink.recipe[i].name" [name]="'Ingredient Title'+i"></ion-input>
 
-        <ion-label>Number of Parts</ion-label>
+        <ion-label position="floating">Number of Parts</ion-label>
         <ion-input type="number" [(ngModel)]="drink.recipe[i].parts" [name]="'Ingredient Parts'+i"></ion-input>
 
-        <ion-label>Color</ion-label>
+        <ion-label position="floating">Color</ion-label>
         <ion-input type="text" [(ngModel)]="drink.recipe[i].color" [name]="'Ingredient Color'+i"></ion-input>
 
         <ion-button (click)="removeIngredient(i)" [disabled]="i==0 && drink.recipe.length==1">Remove</ion-button><br />
